# controller/controller.go
@@ -2,24 +2,33 @@ package controller
 
 import (
 	"fmt"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	_ "github.com/koloo91/mings-server/docs"
 	"github.com/koloo91/mings-server/model"
 	"github.com/koloo91/mings-server/repository"
 	"github.com/koloo91/mings-server/service"
+	"github.com/natefinch/lumberjack"
+	"github.com/sirupsen/logrus"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"gopkg.in/yaml.v2"
-	"log"
+	"io"
 	"net/http"
+	"os"
+	"time"
 )
 
 // @title mings-server API
 // @version 1.0
 func SetupRoutes() *gin.Engine {
+	logrus.Info("Setting up routes")
 
 	router := gin.New()
-	router.Use(gin.Logger(), gin.Recovery())
+
+	router.Use(Logger(), cors.Default(), gin.Recovery())
+
+	// TODO: cors and logging
 
 	router.GET("/documents", all)
 	router.POST("/documents", upload)
@@ -30,22 +39,61 @@ func SetupRoutes() *gin.Engine {
 	return router
 }
 
+func Logger() gin.HandlerFunc {
+	accessLog := logrus.New()
+	accessLog.SetFormatter(&logrus.JSONFormatter{})
+	accessLogWriter := io.MultiWriter(os.Stdout, &lumberjack.Logger{
+		Filename:   "./logs/access.log",
+		MaxSize:    10,
+		MaxBackups: 3,
+		MaxAge:     7,
+	})
+
+	accessLog.SetOutput(accessLogWriter)
+	return func(ctx *gin.Context) {
+		t := time.Now()
+		ctx.Next()
+
+		latency := time.Since(t)
+
+		accessLog.WithFields(logrus.Fields{
+			"code":        ctx.Writer.Status(),
+			"duration_ns": latency,
+			"method":      ctx.Request.Method,
+			"ip":          ctx.ClientIP(),
+			"path":        ctx.Request.URL.Path,
+		}).Info("")
+	}
+}
+
 // GetDocuments godoc
 // @Summary Get all stored documents
 // @Description Get all stored documents
 // @ID get-documents
 // @Produce json
+// @Param depends_on query string false "depends on"
 // @Success 200 {object} model.Documents
 // @Failure 400 {object} model.ApiError
 // @Failure 500 {object} model.ApiError
 // @Router /documents [get]
 func all(ctx *gin.Context) {
-	documents, err := service.GetAll()
-	if err != nil {
-		ctx.JSON(http.StatusBadRequest, model.ApiError{Message: err.Error()})
-		return
+	if dependsOn, exists := ctx.GetQuery("depends_on"); exists {
+		documents, err := service.GetByDependsOn(dependsOn)
+		if err != nil {
+			logrus.Error(err)
+			ctx.JSON(http.StatusBadRequest, model.ApiError{Message: err.Error()})
+			return
+		}
+		ctx.JSON(http.StatusOK, model.Documents{Documents: documents})
+	} else {
+		documents, err := service.GetAll()
+		if err != nil {
+			logrus.Error(err)
+			ctx.JSON(http.StatusBadRequest, model.ApiError{Message: err.Error()})
+			return
+		}
+		ctx.JSON(http.StatusOK, model.Documents{Documents: documents})
 	}
-	ctx.JSON(http.StatusOK, model.Documents{Documents: documents})
 }
 
 // UploadDocument godoc
@@ -62,14 +110,14 @@ func all(ctx *gin.Context) {
 func upload(ctx *gin.Context) {
 	multipartFile, err := ctx.FormFile("file")
 	if err != nil {
-		log.Println(err)
+		logrus.Error(err)
 		ctx.JSON(http.StatusBadRequest, model.ApiError{Message: "error while uploading file"})
 		return
 	}
 
 	file, err := multipartFile.Open()
 	if err != nil {
-		log.Println(err)
+		logrus.Error(err)
 		ctx.JSON(http.StatusBadRequest, model.ApiError{Message: "error while uploading file"})
 		return
 	}
@@ -77,14 +125,14 @@ func upload(ctx *gin.Context) {
 
 	var document model.Document
 	if err := yaml.NewDecoder(file).Decode(&document); err != nil {
-		log.Println(err)
+		logrus.Error(err)
 		ctx.JSON(http.StatusBadRequest, model.ApiError{Message: "unable to parse yaml file"})
 		return
 	}
 
 	err = service.Create(document)
 	if err != nil {
-		log.Println(err)
+		logrus.Error(err)
 		ctx.JSON(http.StatusBadRequest, model.ApiError{Message: "unable store document"})
 		return
 	}
@@ -107,7 +155,7 @@ func byId(ctx *gin.Context) {
 
 	document, err := service.GetById(documentId)
 	if err != nil {
-		log.Println(err)
+		logrus.Error(err)
 		if err == repository.ErrDocumentNotFound {
 			ctx.JSON(http.StatusNotFound, model.ApiError{Message: fmt.Sprintf("document with id '%s' not found", documentId)})
 			return
